--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
+    "react-scroll-parallax": "^3.4.5",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
     "three": "^0.169.0",
